# WAR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md  README_M14_M16_PACKAGE.txt  README_M18_PACKAGE.txt  README_M4_PACKAGE.txt  README_M5_PACKAGE.txt  README_M6_PACKAGE.txt  README_M8_PACKAGE.txt  README_M9_PACKAGE.txt  VALIDATION_EVIDENCE_M48.txt  VALIDATION_EVIDENCE_M50.txt  WAR.code-workspace  WAR.sln  WAR.vcxproj  WAR.vcxproj.filters  WAR_M19_full_pages.md
BetaContent/: m49_beta_content_manifest.txt
Docs/: ChatGPT Lead Artist Prompt.md  ChatGPT Lead Developer Prompt.md  Feature List.md  README.md  Wrath and Ruin - Art Asset Delivery Contract.md  Wrath and Ruin - Art Audit and Direction Lock.md  Wrath and Ruin - Art Direction Asset List.md  Wrath and Ruin - Art Production and Asset Planning Track.md  Wrath and Ruin - GDD.md  Wrath and Ruin - Headless World Host Bootstrap.md  Wrath and Ruin - Lead Artist Considerations.md  Wrath and Ruin - Lead Artist Milestone Runway.md  Wrath and Ruin - Lead Artist Onboarding Package.md  Wrath and Ruin - Local Demo Lane and Packaging Baseline.md  Wrath and Ruin - M29-M48 Lead Developer Milestone Plan.md  Wrath and Ruin - M36 Closeout Implementation Report.md  Wrath and Ruin - M40 Validation and Acceptance Checklist.md  Wrath and Ruin - M40-M44 Sign-Off Report.md  Wrath and Ruin - M41 Validation and Acceptance Checklist.md  Wrath and Ruin - M43 Validation and Acceptance Checklist.md  Wrath and Ruin - M44 Roadmap Audit and Phase 5 Amendments.md  Wrath and Ruin - M44 Validation and Acceptance Checklist.md  Wrath and Ruin - M45 Lead Developer Handoff.md  Wrath and Ruin - M45 Lead Developer Start Prompt.md  Wrath and Ruin - M45-M70 Alpha Playtest Runway.md  Wrath and Ruin - Master Production Plan to Alpha.md  Wrath and Ruin - Milestone Delivery Standard.md  Wrath and Ruin - Persistence Schema and Migration Contract.md  Wrath and Ruin - Replication Latency Harness and Divergence Diagnostics.md  Wrath and Ruin - Runtime Boundary Contract.md  Wrath and Ruin - Shared Simulation Contract.md  Wrath and Ruin - Workspace Realignment Implementation Brief.md  Wrath and Ruin - Workspace Structure Realignment Plan.md
Governance/: README.md
Installer/: m50_installer_manifest.txt  m50_update_channel_manifest.txt
LiveOps/: m52_analytics_hardening_manifest.txt  m52_live_ops_tooling_manifest.txt
Milestones/: M12_FirstBgfxFrame.md  M14_FirstBgfxTileRenderer.md  M15_BgfxEntitiesPlayerAndPath.md  M19_bgfx_Shader_Asset_Pipeline_Cleanup.md  M1_WindowAndRendering.md  M20_bgfx_Texture_Sprite_Pipeline.md  M22_bgfx_Sprite_Expansion_Batch_Cleanup.md  M23_bgfx_Tile_Variant_Authoring_Prep.md  M24_bgfx_Theme_Sets_Authoring_Hooks.md  M25_bgfx_Content_Tagging_Region_Hooks.md  M26_bgfx_Region_Authoring_Overlay_Palette_Hooks.md  M27_bgfx_Region_Data_Expansion_Scene_Semantics.md  M28_bgfx_Semantic_Prop_Hooks_Region_Aware_Dressing.md  M29_bgfx_Regional_Set_Dressing_Encounter_Hooks.md  M2_WorldAndTraversal.md  M30_Playable_Slice_Readability_Interaction_Affordances.md  M31_Canonical_Content_Contract_Runtime_Boundary_Cleanup.md  M32_Local_Demo_Lane_Packaging_Diagnostics_Baseline.md  M33_Shared_Simulation_Contract_Fixed_Step_Ownership.md  M34_Headless_World_Host_Dedicated_Server_Bootstrap.md  M35_Client_Intent_Protocol_Authoritative_Movement_And_Interaction.md  M36_Replication_Latency_Harness_Divergence_Diagnostics.md  M37_Persistence_Schema_Save_Load_Versioned_Migration.md  M3_InteractionLayer.md  (+25 more)
WarEngine/: CMakeLists.txt  WAR.Shared.vcxproj  WAR.Shared.vcxproj.filters
WarEngine/src/core/: Log.cpp
WarEngine/src/engine/content/: SessionMvpAuthoring.h
WarEngine/src/engine/core/: BetaRetentionProtocol.h  EnvironmentConfig.h  FailureBundleProtocol.h  IncidentResponseProtocol.h  LauncherDistributionProtocol.h  LiveOpsProtocol.h  LocalDemoDiagnostics.cpp  Log.h  MarketOnboardingProtocol.h  ReleaseCandidateProtocol.h  RuntimeOwnership.h  RuntimePaths.h  SourceManifestLayout.h  SupportWorkflowProtocol.h  Timer.h
WarEngine/src/engine/gameplay/: Action.h  ActionQueue.h  ActionSystem.h  EntityManager.h
WarEngine/src/engine/host/: AuthoritativeHostProtocol.h  HeadlessHostBootstrap.h  HeadlessHostMode.cpp  HeadlessHostMode.h  HeadlessHostPresence.h  LocalPresenceProtocol.h  LocalSocialProtocol.h  ReconnectSessionProtocol.h  ReplicationHarness.h  SessionEntryProtocol.h
WarEngine/src/engine/render/: BgfxDebugFrameRenderer.cpp  BgfxDebugFrameRenderer.h  BgfxRenderData.cpp  BgfxRenderData.h  BgfxShaderProgram.cpp  BgfxShaderProgram.h  BgfxSpriteMaterial.cpp  BgfxSpriteMaterial.h  BgfxTextureAsset.cpp  BgfxTextureAsset.h  BgfxViewTransform.cpp  BgfxWorldRenderer.cpp  BgfxWorldRenderer.h  BgfxWorldTheme.cpp  Camera2D.cpp  Camera2D.h  DebugOverlayRenderer.cpp  DebugOverlayRenderer.h  GdiRenderDevice.cpp  RemotePresenceRenderProxy.h  RenderAssetPaths.cpp  RenderAssetPaths.h  WorldRenderer.cpp  WorldRenderer.h
WarEngine/src/engine/simulation/: SimulationIntent.h  SimulationRuntime.h
WarEngine/src/engine/world/: Pathfinding.h  WorldRegionTag.h  WorldSemanticDressing.h
WarEngine/src/game/: GameLayer.cpp  GameLayer.h
WarEngine/src/math/: Vec2.cpp
WarEngine/src/platform/: IWindow.h
WarEngine/src/runtime/: RuntimePaths.cpp
WarEngine/src/runtime/host/: AuthoritativeHostProtocol.cpp  HeadlessHostPresence.cpp  ReplicationHarness.cpp
WarEngine/src/simulation/: SimulationRuntime.cpp
WarEngine/src/world/: WorldGrid.cpp  WorldState.cpp
desktop/: CMakeLists.txt  WAR.Desktop.vcxproj  WAR.Desktop.vcxproj.filters
desktop/src/: main.cpp
server/: CMakeLists.txt  WAR.Server.vcxproj  WAR.Server.vcxproj.filters
server/src/: main.cpp
shared/: CMakeLists.txt  WAR.Shared.vcxproj  WAR.Shared.vcxproj.filters
shared/src/core/: Timer.cpp
shared/src/gameplay/: ActionSystem.cpp  EntityManager.cpp
shared/src/runtime/: RuntimePaths.cpp
shared/src/runtime/host/: AuthoritativeHostProtocol.cpp  HeadlessHostPresence.cpp
shared/src/simulation/: SimulationRuntime.cpp
shared/src/world/: WorldGrid.cpp  WorldSemanticDressing.cpp  WorldState.cpp
(+254 files in other folders)
